--- a/Advisor.csproj
+++ b/Advisor.csproj
@@ -25,7 +25,7 @@
     <MvcBuildViews>false</MvcBuildViews>
     <UseIISExpress>true</UseIISExpress>
     <Use64BitIISExpress />
-    <IISExpressSSLPort>44308</IISExpressSSLPort>
+    <IISExpressSSLPort>44392</IISExpressSSLPort>
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
@@ -315,10 +315,12 @@
     <Compile Include="Tests\StatsBuilderTests.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\css\account.css" />
     <Content Include="Assets\css\admin.css" />
     <Content Include="Assets\css\comparison.css" />
     <Content Include="Assets\css\course.css" />
     <Content Include="Assets\css\faculty.css" />
+    <Content Include="Assets\css\home.css" />
     <Content Include="Assets\css\lib\bootstrap-theme.css" />
     <Content Include="Assets\css\lib\bootstrap-theme.min.css" />
     <Content Include="Assets\css\lib\bootstrap.css" />
@@ -326,12 +328,13 @@
     <Content Include="Assets\css\fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Assets\css\review.css" />
     <Content Include="Assets\css\university.css" />
-    <Content Include="Assets\css\universityList.css" />
     <Content Include="Assets\js\lib\bootstrap.js" />
     <Content Include="Assets\js\lib\bootstrap.min.js" />
     <Content Include=".gitignore" />
     <Content Include=".babelrc" />
+    <Content Include="Assets\js\react\admin.js" />
     <Content Include="Assets\js\react\comparison.js" />
+    <Content Include="Assets\js\react\components\AdminItemList.js" />
     <Content Include="Assets\js\react\components\CourseStats.js" />
     <Content Include="Assets\js\react\components\FacultyStats.js" />
     <Content Include="Assets\js\react\components\InputDropdown.js" />
@@ -340,8 +343,14 @@
     <Content Include="Assets\js\react\components\StatsContainer.js" />
     <Content Include="Assets\js\react\components\StudyProgramStats.js" />
     <Content Include="Assets\js\react\components\UniversityStats.js" />
+    <Content Include="Assets\js\react\config\adminRoutes.js" />
     <Content Include="Assets\js\react\config\routes.js" />
     <Content Include="Assets\js\react\config\types.js" />
+    <Content Include="Assets\js\react\containers\AdminCourseTabContainer.js" />
+    <Content Include="Assets\js\react\containers\AdminFacultyTabContainer.js" />
+    <Content Include="Assets\js\react\containers\AdminLecturerTabContainer.js" />
+    <Content Include="Assets\js\react\containers\AdminStudyProgramTabContainer.js" />
+    <Content Include="Assets\js\react\containers\AdminUniversityTabContainer.js" />
     <Content Include="Assets\js\react\containers\ComparisonContainer.js" />
     <Content Include="Assets\js\react\service\IconClassResolver.js" />
     <Content Include="Assets\js\react\service\StatsProvider.js" />
@@ -396,7 +405,7 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="Views\University\UniversityList.cshtml" />
+    <Content Include="Views\Advisor\UniversityList.cshtml" />
     <Content Include="Views\Account\_ExternalLoginsListPartial.cshtml" />
     <Content Include="Views\Account\ConfirmEmail.cshtml" />
     <Content Include="Views\Account\ExternalLoginConfirmation.cshtml" />
@@ -418,17 +427,18 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Shared\_FooterPartial.cshtml" />
-    <Content Include="Views\University\University.cshtml" />
+    <Content Include="Views\Advisor\University.cshtml" />
     <Content Include="Views\Shared\404.cshtml" />
-    <Content Include="Views\Comparison\Comparison.cshtml" />
-    <Content Include="Views\Faculty.cshtml" />
-    <Content Include="Views\StudyProgram\StudyProgram.cshtml" />
-    <Content Include="Views\Review\Review.cshtml" />
-    <Content Include="Views\Course\Course.cshtml" />
-    <Content Include="Views\Review\Partials\_StudyProgramFormPartial.cshtml" />
-    <Content Include="Views\Review\Partials\_CourseFormPartial.cshtml" />
-    <Content Include="Views\Review\Partials\_LecturerFormPartial.cshtml" />
-    <Content Include="Views\Admin\Admin.cshtml" />
+    <Content Include="Views\Advisor\Comparison.cshtml" />
+    <Content Include="Views\Advisor\Faculty.cshtml" />
+    <Content Include="Views\Advisor\StudyProgram.cshtml" />
+    <Content Include="Views\Advisor\Review\Review.cshtml" />
+    <Content Include="Views\Advisor\Course.cshtml" />
+    <Content Include="Views\Advisor\Review\Partials\_StudyProgramFormPartial.cshtml" />
+    <Content Include="Views\Advisor\Review\Partials\_CourseFormPartial.cshtml" />
+    <Content Include="Views\Advisor\Review\Partials\_LecturerFormPartial.cshtml" />
+    <Content Include="Views\Advisor\Admin.cshtml" />
+    <Content Include="Views\Shared\_CompareButton.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\uploads\" />
