--- a/Advisor.csproj
+++ b/Advisor.csproj
@@ -459,6 +459,7 @@
     <Content Include="package.json" />
     <Content Include="Migrations\Data\Address.csv" />
     <Content Include="Migrations\Data\Dormitory.csv" />
+    <Content Include="ConnStrings.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
